prowlarr/ciliumnetworkpolicy-prowlarr.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  endpointSelector: {}
  egress:
    # Allow to the world
    - toEntities:
        - world

    # Allow to any pods in this namespace
    - toEndpoints:
        - {}

    # Allow to Kube DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"

    # Allow prowlarr to talk to flaresolverr
    - toEndpoints:
      - matchLabels:
          app.kubernetes.io/name: flaresolverr
          k8s:io.kubernetes.pod.namespace: flaresolverr  
      toPorts:
        - ports:
            - port: "9117"
